[tool.poetry]
name = "zboxapi"
version = "0.0.2"
description = ""
authors = ["Kelby Valenti <kelby.valenti@gmail.com>", "Timo Sugliani <timo.sugliani@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
zboxapi = "zboxapi.main:launch"

[tool.poetry.dependencies]
fastapi = "0.111.0"
python = ">=3.12"
uvicorn = "0.29.0"
ipython = "^8.24.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",
]

[[tool.poetry_bumpversion.replacements]]
files = [
    "src/zboxapi/__init__.py",
]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

